# LaunchMyProject

./: .gitignore  LICENSE  README.md  index.md  setup.cfg  setup.py
docs/: index.md
src/: DriverArgument.py  driver.py  execute.bat  execute.sh  execute.sh.command  gui.py  lmp.py  projects.json  projects.py  setup.py  smp.py  utils.py
src/Start_My_Project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/lmp.egg-info/: PKG-INFO
src/tests/: TestProjects.py
