[metadata]
name = smp
version = 0.0.7
description = A simple CLI to quickly and cleanly perform the daily routine of starting projects
author = Jacob Kelly Miller (jacobmiller22)
author_email = jacobmillerdev@gmail.com
maintainer = Jacob Kelly Miller (jacobmiller22)
maintainer_email = jacobmillerdev@gmail.com
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
package_dir=
    =src
packages = find:
scripts =
    src/driver.py
    src/smp.py
    src/projects.json

[options.packages.find] #optional
where = src

[options.entry_points]
console_scripts =
    smp = smp:smp

